    - returned `*Model` objects have an appropriate "API Support" attribute.
allow sending `"$vector": None` when inserting into collections
support for modelSupport in findRerankingProviders
CollectionDefinition fluent interface: set_lexical and set_rerank accept also just 'enabled'
find_and_rerank scores' type enlarged to: `float|int|null`
maintenance: switched to uv (from poetry)
maintenance: promoted findAndRerank testing to the 'regular' IT (adjusted readme and env templates accordingly)
maintenance: pin h11 to 0.16.0 or higher (after a vulnerability report)
maintenance: switch to latest HCD for non-Astra CI github action
maintenance: introduce CQL-driven testing for low/no-support table columns. `LOCAL_DATA_API_APPLICATION_TOKEN` local test auth not supported anymore.

v 2.0.1
=======
bugfix: receiving `'$vector': null` caused response parsing to break

v 2.0.0
=======
Collections admit `DataAPIMap` in writing and support `DataAPIDate` as well (the latter coming with the same timezone caveats as `datetime.date`)
(plus all of the v2 pre-releases below)


v 2.0.0rc2
==========
Cursors (class hierarchy revised to accommodate `find_and_rerank`, plus other changes):
    - renamed the 'FindCursorState' enum to `CursorState`
    - renamed the abstract ur-class 'FindCursor' => `AbstractCursor`
    - `clone` method does not strip the mapping anymore, rather retains it
    - removed the `alive` sugar property (use `cursors.state != CursorState.CLOSED`)
Support for reranker header-based authentication:
    - new authentication classes `RerankingHeadersProvider`, `RerankingAPIKeyHeaderProvider`
    - introduced `reranking_api_key` parameter for APIOptions, `{get|create}_{table|collection}` database methods, collection/table `with_options` and `to_[a]sync` methods
Support for "findRerankingProviders" API command in Database Admin classes: